--- a/components/content.html
+++ b/components/content.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jrigg Construction - About</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
-    <link rel="stylesheet" href="/assets/css/bootstrap-grid.css" />
-    <link rel="stylesheet" href="/assets/css/base.css" />
-    <link rel="stylesheet" href="/assets/css/all.css" />
+    <link rel="stylesheet" href="../assets/css/bootstrap-grid.css" />
+    <link rel="stylesheet" href="../assets/css/base.css" />
+    <link rel="stylesheet" href="../assets/css/all.css" />
     <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css" />
 </head>
@@ -123,7 +123,7 @@
                     </div>
                     <div class="col-lg-6 col-12 content__box-img">
                         <div class="content__box">
-                            <img src="/assets/img/content.jpg" alt="#" class="content__img" />
+                            <img src="../assets/img/content.jpg" alt="#" class="content__img" />
                         </div>
                     </div>
                 </div>
@@ -140,6 +140,6 @@
         </footer>
     </main>
 
-    <script src="/assets/js/header.js"></script>
+    <script src="../assets/js/header.js"></script>
 </body>
 </html>
