Updated asset links

--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -104,6 +104,7 @@ p {
 
 @import "components/header";
 @import "components/sectionTitle";
+@import "components/sectionDesc";
 @import "components/layout";
 @import "components/button";
 @import "components/footer";
