--- a/components/project-card.html
+++ b/components/project-card.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jrigg Construction - About</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
-    <link rel="stylesheet" href="../assets/css/bootstrap-grid.css" />
-    <link rel="stylesheet" href="../assets/css/base.css" />
-    <link rel="stylesheet" href="../assets/css/all.css" />
+    <link rel="stylesheet" href="/assets/css/bootstrap-grid.css" />
+    <link rel="stylesheet" href="/assets/css/base.css" />
+    <link rel="stylesheet" href="/assets/css/all.css" />
     <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css" />
 </head>
@@ -118,7 +118,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="projects__card">
                             <div class="projects__card-img">
-                                <img src="../assets/img/content.jpg" alt="#" />
+                                <img src="/assets/img/content.jpg" alt="#" />
                             </div>
                             <div class="projects__card-info">
                                 <h3 class="projects__card-title">Project Name</h3>
@@ -133,7 +133,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="projects__card">
                             <div class="projects__card-img">
-                                <img src="../assets/img/content.jpg" alt="#" />
+                                <img src="/assets/img/content.jpg" alt="#" />
                             </div>
                             <div class="projects__card-info">
                                 <h3 class="projects__card-title">Project Name</h3>
@@ -148,7 +148,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="projects__card">
                             <div class="projects__card-img">
-                                <img src="../assets/img/content.jpg" alt="#" />
+                                <img src="/assets/img/content.jpg" alt="#" />
                             </div>
                             <div class="projects__card-info">
                                 <h3 class="projects__card-title">Project Name</h3>
@@ -163,7 +163,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="projects__card">
                             <div class="projects__card-img">
-                                <img src="../assets/img/content.jpg" alt="#" />
+                                <img src="/assets/img/content.jpg" alt="#" />
                             </div>
                             <div class="projects__card-info">
                                 <h3 class="projects__card-title">Project Name</h3>
@@ -178,7 +178,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="projects__card">
                             <div class="projects__card-img">
-                                <img src="../assets/img/content.jpg" alt="#" />
+                                <img src="/assets/img/content.jpg" alt="#" />
                             </div>
                             <div class="projects__card-info">
                                 <h3 class="projects__card-title">Project Name</h3>
@@ -193,7 +193,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="projects__card">
                             <div class="projects__card-img">
-                                <img src="../assets/img/content.jpg" alt="#" />
+                                <img src="/assets/img/content.jpg" alt="#" />
                             </div>
                             <div class="projects__card-info">
                                 <h3 class="projects__card-title">Project Name</h3>
@@ -219,7 +219,7 @@
         </footer>
     </main>
 
-    <script src="../assets/js/header.js"></script>
-    <script src="../assets/js/faq.js"></script>
+    <script src="/assets/js/header.js"></script>
+    <script src="/assets/js/faq.js"></script>
 </body>
 </html>
