Added Banner CSS to Base; Completed Associates Page;

--- a/assets/css/all.scss
+++ b/assets/css/all.scss
@@ -1,4 +1,3 @@
-@import "components/banner";
 @import "components/contact";
 @import "components/content";
 @import "components/faq";
@@ -7,3 +6,4 @@
 @import "components/layout";
 @import "components/peopleCard";
 @import "components/contact/data-item";
+@import "components/logoSwiper";
