--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -103,6 +103,7 @@ p {
 }
 
 @import "components/header";
+@import "components/banner";
 @import "components/sectionTitle";
 @import "components/sectionDesc";
 @import "components/layout";
