--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -1,69 +1,3 @@
-.banner {
-  position: relative;
-  padding: 170px 0 80px;
-  background-color: var(--primary-light);
-}
-
-@media screen and (min-width: 992px) {
-  .banner {
-    padding-top: 130px;
-  }
-}
-
-.banner.text__center {
-  text-align: center !important;
-}
-
-.banner.base {
-  background-color: var(--primary-color);
-}
-
-.banner.dark {
-  background-color: var(--primary-dark);
-}
-
-.banner.darkest {
-  background-color: var(--primary-darkest);
-}
-
-.banner.image {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.35)), to(rgba(0, 0, 0, 0.35))), url(/assets/img/banner-2.png);
-  background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url(/assets/img/banner-2.png);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.banner__info {
-  z-index: 10;
-}
-
-.banner__title {
-  font-size: 48px;
-  line-height: 1.2;
-  margin-bottom: 0;
-  color: var(--white-color);
-}
-
-@media screen and (min-width: 1200px) {
-  .banner__title {
-    font-size: 56px;
-  }
-}
-
-@media screen and (min-width: 1400px) {
-  .banner__title {
-    font-size: 64px;
-  }
-}
-
-.banner__desc {
-  font-size: 1rem;
-  line-height: 1.6;
-  margin: 0.5rem 0 0;
-  color: var(--white-alt);
-}
-
 .form {
   margin-bottom: 5rem;
   /*Input focus move up label*/
@@ -633,5 +567,71 @@
   font-size: 1.5rem;
   line-height: 1;
   margin-right: 16px;
+}
+
+:root {
+  --scroller-size: 500vw;
+}
+
+@media (max-width: 1200px) {
+  :root {
+    --scroller-size: 800vw;
+  }
+}
+
+@media (max-width: 800px) {
+  :root {
+    --scroller-size: 1000vw;
+  }
+  :root .scroller-img {
+    max-width: 130px;
+    max-height: 30px;
+  }
+}
+
+@media (max-width: 500px) {
+  :root {
+    --scroller-size: 1400vw;
+  }
+}
+
+.associates__container {
+  overflow: hidden;
+}
+
+.associates__scroller {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: var(--scroller-size);
+  -webkit-animation: icon-scroller 120s linear 0s normal infinite;
+          animation: icon-scroller 120s linear 0s normal infinite;
+  will-change: transform;
+}
+
+.associates__img {
+  max-width: 150px;
+  max-height: 30px;
+  -webkit-filter: brightness(0) invert(1);
+          filter: brightness(0) invert(1);
+}
+
+@-webkit-keyframes icon-scroller {
+  100% {
+    -webkit-transform: translateX(calc(var(--scroller-size) * -0.5));
+            transform: translateX(calc(var(--scroller-size) * -0.5));
+  }
+}
+
+@keyframes icon-scroller {
+  100% {
+    -webkit-transform: translateX(calc(var(--scroller-size) * -0.5));
+            transform: translateX(calc(var(--scroller-size) * -0.5));
+  }
 }
 /*# sourceMappingURL=all.css.map */
