Started Single Project Page; favicons; new project cards

--- a/assets/css/all.scss
+++ b/assets/css/all.scss
@@ -3,6 +3,7 @@
 @import "components/faq";
 @import "components/recruitmentCard";
 @import "components/projectCard";
+@import "components/projectCard2";
 @import "components/layout";
 @import "components/peopleCard";
 @import "components/contact/data-item";
