--- a/components/recruitment-card.html
+++ b/components/recruitment-card.html
@@ -5,6 +5,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="msapplication-TileColor" content="#023815">
+    <meta name="theme-color" content="#023815">
+
     <title>Jrigg Construction - About</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
     <link rel="stylesheet" href="/assets/css/bootstrap-grid.css" />
@@ -128,7 +145,14 @@
                             <div class="recruitment__card-info">
                                 <span class="recruitment__card-badge">Full-time</span>
                                 <h3 class="recruitment__card-title">Masonry</h3>
-                                <p class="recruitment__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta corporis veniam, fugit quos, quidem nemo odit, aut ipsum ad officia earum iste ea ipsa facilis?</p>
+                                <!-- <p class="recruitment__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta corporis veniam, fugit quos, quidem nemo odit, aut ipsum ad officia earum iste ea ipsa facilis?</p> -->
+                                <ul class="recruitment__card-list">
+                                    <li>This is the start of a list</li>
+                                    <li><a href="#">Bullet 1</a></li>
+                                    <li>Bullet 2</li>
+                                    <li>Bullet 3</li>
+                                    <li>Bullet 4</li>
+                                </ul>
                                 <a href="#" class="button recruitment__card-btn icon--right">Read More <i class="bx bx-right-arrow-alt"></i></a>
                             </div>
                         </div>
