--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -337,6 +337,20 @@
   margin-bottom: 2rem;
 }
 
+.recruitment__card a {
+  color: var(--secondary-color);
+  text-decoration: none;
+  cursor: pointer;
+  -webkit-transition-duration: 0.4s;
+          transition-duration: 0.4s;
+  -webkit-transition-timing-function: ease-in-out;
+          transition-timing-function: ease-in-out;
+}
+
+.recruitment__card a:hover {
+  color: var(--white-color);
+}
+
 .recruitment__card-badge {
   font-family: var(--body-font);
   font-style: normal;
@@ -360,27 +374,34 @@
   margin-bottom: 2rem;
 }
 
-.recruitment__card-btn {
+.recruitment__card-list {
+  margin: 1rem 0 2rem 1rem;
+  padding: 0;
+  list-style-type: disc;
+  color: var(--white-alt);
+}
+
+.recruitment__card-btn, .recruitment__card .button {
   background-color: var(--primary-light);
   color: var(--white-color);
 }
 
-.recruitment__card-btn:hover, .recruitment__card-btn:focus {
+.recruitment__card-btn:hover, .recruitment__card-btn:focus, .recruitment__card .button:hover, .recruitment__card .button:focus {
   background-color: var(--white-color);
   color: var(--primary-dark);
 }
 
-.recruitment__card-btn:hover i, .recruitment__card-btn:hover svg, .recruitment__card-btn:focus i, .recruitment__card-btn:focus svg {
+.recruitment__card-btn:hover i, .recruitment__card-btn:hover svg, .recruitment__card-btn:focus i, .recruitment__card-btn:focus svg, .recruitment__card .button:hover i, .recruitment__card .button:hover svg, .recruitment__card .button:focus i, .recruitment__card .button:focus svg {
   color: var(--primary-dark);
 }
 
-.recruitment__card-btn.disabled, .recruitment__card-btn.disabled:hover, .recruitment__card-btn.disabled:focus, .recruitment__card-btn:disabled, .recruitment__card-btn:disabled:hover, .recruitment__card-btn:disabled:focus {
+.recruitment__card-btn.disabled, .recruitment__card-btn.disabled:hover, .recruitment__card-btn.disabled:focus, .recruitment__card-btn:disabled, .recruitment__card-btn:disabled:hover, .recruitment__card-btn:disabled:focus, .recruitment__card .button.disabled, .recruitment__card .button.disabled:hover, .recruitment__card .button.disabled:focus, .recruitment__card .button:disabled, .recruitment__card .button:disabled:hover, .recruitment__card .button:disabled:focus {
   background-color: rgba(242, 242, 242, 0.5);
   color: #666B7E;
   pointer-events: none;
 }
 
-.recruitment__card-btn.disabled i, .recruitment__card-btn.disabled svg, .recruitment__card-btn.disabled:hover i, .recruitment__card-btn.disabled:hover svg, .recruitment__card-btn.disabled:focus i, .recruitment__card-btn.disabled:focus svg, .recruitment__card-btn:disabled i, .recruitment__card-btn:disabled svg, .recruitment__card-btn:disabled:hover i, .recruitment__card-btn:disabled:hover svg, .recruitment__card-btn:disabled:focus i, .recruitment__card-btn:disabled:focus svg {
+.recruitment__card-btn.disabled i, .recruitment__card-btn.disabled svg, .recruitment__card-btn.disabled:hover i, .recruitment__card-btn.disabled:hover svg, .recruitment__card-btn.disabled:focus i, .recruitment__card-btn.disabled:focus svg, .recruitment__card-btn:disabled i, .recruitment__card-btn:disabled svg, .recruitment__card-btn:disabled:hover i, .recruitment__card-btn:disabled:hover svg, .recruitment__card-btn:disabled:focus i, .recruitment__card-btn:disabled:focus svg, .recruitment__card .button.disabled i, .recruitment__card .button.disabled svg, .recruitment__card .button.disabled:hover i, .recruitment__card .button.disabled:hover svg, .recruitment__card .button.disabled:focus i, .recruitment__card .button.disabled:focus svg, .recruitment__card .button:disabled i, .recruitment__card .button:disabled svg, .recruitment__card .button:disabled:hover i, .recruitment__card .button:disabled:hover svg, .recruitment__card .button:disabled:focus i, .recruitment__card .button:disabled:focus svg {
   color: #666B7E;
 }
 
@@ -450,6 +471,122 @@
 .projects__card-btn:hover i {
   -webkit-transform: translateX(0.5rem);
           transform: translateX(0.5rem);
+}
+
+.project__card {
+  background-color: var(--primary-light);
+  margin-bottom: 1.5rem;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.project__card-img {
+  width: 100%;
+  height: 100%;
+  max-height: 300px;
+  overflow: hidden;
+}
+
+.project__card-img:hover img {
+  -webkit-transform: rotate(2deg) scale(1.1);
+          transform: rotate(2deg) scale(1.1);
+}
+
+.project__card-img a {
+  text-decoration: none;
+  color: var(--white-color);
+}
+
+.project__card-img img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  -webkit-transition-timing-function: ease-in-out;
+          transition-timing-function: ease-in-out;
+}
+
+.project__card-info {
+  padding: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .project__card-info {
+    padding: 34px;
+  }
+}
+
+@media screen and (min-width: 640px) {
+  .project__card-info {
+    padding: 42px;
+  }
+}
+
+.project__card-title {
+  font-size: 36px;
+  line-height: 1.2;
+  font-weight: 100;
+  font-family: var(--serif-font);
+  font-style: normal;
+  color: var(--white-color);
+  margin-bottom: 1.5rem;
+}
+
+.project__card-title a {
+  display: block;
+  color: var(--white-color);
+  -webkit-transition-duration: 0.4s;
+          transition-duration: 0.4s;
+  -webkit-transition-timing-function: ease-in-out;
+          transition-timing-function: ease-in-out;
+}
+
+.project__card-title a:hover {
+  color: var(--secondary-color);
+}
+
+.project__card-desc {
+  color: rgba(255, 255, 255, 0.6);
+  line-height: 1.6;
+  font-size: 1rem;
+  font-family: var(--body-font);
+  font-style: normal;
+  font-weight: 300;
+  margin: 0;
+}
+
+.project__card-btn {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  line-height: 1;
+  font-size: 1rem;
+}
+
+.project__card-btn i {
+  font-size: 1.35rem;
+  margin-left: 1rem;
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-in-out;
+          transition-timing-function: ease-in-out;
+}
+
+.project__card-btn:hover i {
+  -webkit-transform: translateX(0.5rem);
+          transform: translateX(0.5rem);
+}
+
+.projects.hybrid .project__card-desc {
+  padding-bottom: 2rem;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.25);
+  margin-bottom: 2rem;
 }
 
 /*========== Layout ==========*/
