--- a/components/project-card.html
+++ b/components/project-card.html
@@ -5,6 +5,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="msapplication-TileColor" content="#023815">
+    <meta name="theme-color" content="#023815">
+
     <title>Jrigg Construction - About</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
     <link rel="stylesheet" href="/assets/css/bootstrap-grid.css" />
@@ -160,14 +177,85 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section projects">
+            <div class="an-container">
+                <div class="row projects__row">
                     <div class="col-lg-4 col-md-6">
-                        <div class="projects__card">
-                            <div class="projects__card-img">
-                                <img src="/assets/img/content.jpg" alt="#" />
+                        <div class="project__card">
+                            <div class="project__card-img">
+                                <a href="#">
+                                    <img src="/assets/img/content.jpg" alt="#" />
+                                </a>
                             </div>
-                            <div class="projects__card-info">
-                                <h3 class="projects__card-title">Project Name</h3>
-                                <p class="projects__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit eius officiis laborum! Alias, deserunt. Voluptates cum minima iure dolor velit quisquam officia hic, quos vero!</p>
+                            <div class="project__card-info">
+                                <h3 class="project__card-title">
+                                    <a href="#">
+                                        Project Name
+                                    </a>
+                                </h3>
+                                <p class="project__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit eius officiis laborum! Alias, deserunt. Voluptates cum minima iure dolor velit quisquam officia hic, quos vero!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="project__card">
+                            <div class="project__card-img">
+                                <a href="#">
+                                    <img src="/assets/img/content.jpg" alt="#" />
+                                </a>
+                            </div>
+                            <div class="project__card-info">
+                                <h3 class="project__card-title">
+                                    <a href="#">
+                                        Project Name
+                                    </a>
+                                </h3>
+                                <p class="project__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit eius officiis laborum! Alias, deserunt. Voluptates cum minima iure dolor velit quisquam officia hic, quos vero!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="project__card">
+                            <div class="project__card-img">
+                                <a href="#">
+                                    <img src="/assets/img/content.jpg" alt="#" />
+                                </a>
+                            </div>
+                            <div class="project__card-info">
+                                <h3 class="project__card-title">
+                                    <a href="#">
+                                        Project Name
+                                    </a>
+                                </h3>
+                                <p class="project__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit eius officiis laborum! Alias, deserunt. Voluptates cum minima iure dolor velit quisquam officia hic, quos vero!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        <section class="section projects hybrid">
+            <div class="an-container">
+                <div class="row projects__row">
+                    <div class="col-lg-4 col-md-6">
+                        <div class="project__card">
+                            <div class="project__card-img">
+                                <a href="#">
+                                    <img src="/assets/img/content.jpg" alt="#" />
+                                </a>
+                            </div>
+                            <div class="project__card-info">
+                                <h3 class="project__card-title">
+                                    <a href="#">
+                                        Project Name
+                                    </a>
+                                </h3>
+                                <p class="project__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit eius officiis laborum! Alias, deserunt. Voluptates cum minima iure dolor velit quisquam officia hic, quos vero!</p>
                                 <a href="project-singular.html" class="projects__card-btn">
                                     View Details
                                     <i class="lni lni-arrow-right"></i>
@@ -176,13 +264,19 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <div class="projects__card">
-                            <div class="projects__card-img">
-                                <img src="/assets/img/content.jpg" alt="#" />
+                        <div class="project__card">
+                            <div class="project__card-img">
+                                <a href="#">
+                                    <img src="/assets/img/content.jpg" alt="#" />
+                                </a>
                             </div>
-                            <div class="projects__card-info">
-                                <h3 class="projects__card-title">Project Name</h3>
-                                <p class="projects__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit eius officiis laborum! Alias, deserunt. Voluptates cum minima iure dolor velit quisquam officia hic, quos vero!</p>
+                            <div class="project__card-info">
+                                <h3 class="project__card-title">
+                                    <a href="#">
+                                        Project Name
+                                    </a>
+                                </h3>
+                                <p class="project__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit eius officiis laborum! Alias, deserunt. Voluptates cum minima iure dolor velit quisquam officia hic, quos vero!</p>
                                 <a href="project-singular.html" class="projects__card-btn">
                                     View Details
                                     <i class="lni lni-arrow-right"></i>
@@ -191,13 +285,19 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <div class="projects__card">
-                            <div class="projects__card-img">
-                                <img src="/assets/img/content.jpg" alt="#" />
+                        <div class="project__card">
+                            <div class="project__card-img">
+                                <a href="#">
+                                    <img src="/assets/img/content.jpg" alt="#" />
+                                </a>
                             </div>
-                            <div class="projects__card-info">
-                                <h3 class="projects__card-title">Project Name</h3>
-                                <p class="projects__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit eius officiis laborum! Alias, deserunt. Voluptates cum minima iure dolor velit quisquam officia hic, quos vero!</p>
+                            <div class="project__card-info">
+                                <h3 class="project__card-title">
+                                    <a href="#">
+                                        Project Name
+                                    </a>
+                                </h3>
+                                <p class="project__card-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit eius officiis laborum! Alias, deserunt. Voluptates cum minima iure dolor velit quisquam officia hic, quos vero!</p>
                                 <a href="project-singular.html" class="projects__card-btn">
                                     View Details
                                     <i class="lni lni-arrow-right"></i>
