--- a/components/project-card.html
+++ b/components/project-card.html
@@ -43,7 +43,7 @@
         </div>
 
         <footer class="header__social">
-            <a href="#">
+            <a href="https://www.instagram.com/jrigg_broadway/">
                 <i class="bx bxl-instagram"></i>
             </a>
             <a href="#">
@@ -105,7 +105,7 @@
                         <a href="/contact.html" class="nav__link">Contact</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#0" class="nav__link">
+                        <a href="https://www.instagram.com/jrigg_broadway/" class="nav__link">
                             Instagram
                             <i class="bx bxl-instagram"></i>
                         </a>
