--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -71,6 +71,7 @@
 }
 
 .faq {
+  --scrollHeight: 300px;
   background: var(--white-color);
   border: 1px solid #f3f4fe;
   -webkit-box-shadow: 0px 20px 95px rgba(201, 203, 204, 0.3);
@@ -81,7 +82,7 @@
 }
 
 .faq.opened .faq__info {
-  max-height: 300px;
+  max-height: var(--scrollHeight);
 }
 
 .faq.opened .faq__icon i {
@@ -129,10 +130,10 @@
 }
 
 .faq__icon i {
-  -webkit-transition-duration: 0.5s;
-          transition-duration: 0.5s;
-  -webkit-transition-timing-function: ease-in-out;
-          transition-timing-function: ease-in-out;
+  -webkit-transition-duration: 0.4s;
+          transition-duration: 0.4s;
+  -webkit-transition-timing-function: ease;
+          transition-timing-function: ease;
 }
 
 .faq__info {
