--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -11,6 +11,14 @@
   margin-bottom: 2rem;
 }
 
+.form__content:focus-within {
+  border-bottom-color: var(--secondary-color);
+}
+
+.form__content:focus-within .form__label {
+  color: var(--secondary-color);
+}
+
 .form__input {
   position: absolute;
   top: 0;
@@ -138,15 +146,11 @@
 }
 
 .contact a.contact__desc {
-  -webkit-transition-duration: 0.3s;
-          transition-duration: 0.3s;
+  -webkit-transition-duration: 0.4s;
+          transition-duration: 0.4s;
   -webkit-transition-timing-function: ease;
           transition-timing-function: ease;
   cursor: pointer;
-}
-
-.contact a.contact__desc:hover {
-  color: var(--primary-light);
 }
 
 .contact__icon {
@@ -247,6 +251,7 @@
 }
 
 .faq {
+  --scrollHeight: 300px;
   background: var(--white-color);
   border: 1px solid #f3f4fe;
   -webkit-box-shadow: 0px 20px 95px rgba(201, 203, 204, 0.3);
@@ -257,7 +262,7 @@
 }
 
 .faq.opened .faq__info {
-  max-height: 300px;
+  max-height: var(--scrollHeight);
 }
 
 .faq.opened .faq__icon i {
@@ -305,10 +310,10 @@
 }
 
 .faq__icon i {
-  -webkit-transition-duration: 0.5s;
-          transition-duration: 0.5s;
-  -webkit-transition-timing-function: ease-in-out;
-          transition-timing-function: ease-in-out;
+  -webkit-transition-duration: 0.4s;
+          transition-duration: 0.4s;
+  -webkit-transition-timing-function: ease;
+          transition-timing-function: ease;
 }
 
 .faq__info {
