--- a/assets/css/components/_header.scss
+++ b/assets/css/components/_header.scss
@@ -14,6 +14,13 @@
     align-items: flex-start;
     justify-content: space-between;
 
+    &__home {
+        @media screen and (min-width: 992px) {
+            min-height: 0 !important;
+            height: auto !important;
+        }
+    }
+
     @media (max-width: 991px) {
         &::before {
             content: "";
