--- a/assets/css/components/_projectSlider.scss
+++ b/assets/css/components/_projectSlider.scss
@@ -2,10 +2,27 @@
     &__slide {
         display: flex;
         flex-wrap: wrap;
+
+        @media screen and (max-width: 992px) {
+            max-height: 100vh;
+            height: 100%;
+
+            &-img {
+                max-height: 100vh;
+            }
+        }
     
         &-info {
             width: 100%;
-            padding: 130px 2rem 80px;
+            padding: 100px 2rem 0;
+            height: 100vh;
+            overflow-x: hidden;
+            overflow-y: auto;
+
+            @media screen and (min-width: 992px) {
+                padding: 130px 2rem 80px;
+                height: auto;
+            }
 
             h2 {
                 font-size: 48px;
@@ -29,7 +46,21 @@
                 max-width: none;
                 max-height: none;
                 object-fit: cover;
+                border-radius: 0;
             }
+        }
+    }
+
+    &__maximize {
+        position: absolute;
+        bottom: 37px; 
+        right: 30px; 
+        color: var(--white-color); 
+        cursor: pointer;
+        font-size: 2rem;
+
+        @media screen and (max-width: 992px) and (orientation: landscape) and (max-height: 650px) {
+            bottom: 22px;
         }
     }
 
@@ -43,6 +74,10 @@
             top: initial !important;
             width: auto !important;
             border-radius: 0 !important;
+
+            @media screen and (max-width: 992px) and (orientation: landscape) and (max-height: 650px) {
+                bottom: 28px !important;
+            }
         }
 
         .swiper-pagination-bullet {
@@ -95,6 +130,94 @@
             @media (min-width: 1250px) {
                 width: 70%;
             }
+        }
+    }
+
+    &__nav {
+        &-item {
+            border: 1px solid var(--white-alt);
+            color: var(--white-color);
+            border-radius: 10px;
+            background-color: transparent;
+            padding: 0.5rem;
+            line-height: 1;
+            cursor: pointer;
+            z-index: 2;
+            transition-duration: 0.4s;
+            transition-timing-function: ease-out;
+            font-size: 2rem;
+            pointer-events: all;
+
+            &:hover {
+                background-color: rgba(255, 255, 255, 0.2);
+            }
+
+            &:focus, &:active {
+                background-color: var(--white-color);
+                color: var(--primary-color);
+            }
+
+            @media screen and (min-width: 992px) {
+                padding: 0.75rem;
+            }
+
+            &.swiper-button-disabled {
+                opacity: 0.5;
+                pointer-events: none;
+            }
+        }
+
+        &-next {
+            position: absolute;
+            top: 50%;
+            right: 12px;
+            transform: translate(-1rem, -50%);
+
+            @media screen and (min-width: 992px) {
+                right: 1rem;
+            }
+        }
+
+        &-prev {
+            position: absolute;
+            top: 50%;
+            left: 8px;
+            transform: translate(1rem, -50%);
+
+            @media screen and (min-width: 992px) {
+                left: 1rem;
+            }
+        }
+
+        &-fullscreen {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.5rem;
+        }
+    }
+}
+
+.gslide img {
+    border-radius: 0 !important;
+}
+
+.glightbox-clean {
+    @media screen and (max-width: 768px) {
+        .gprev, .gnext {
+            top: 90% !important;
+
+            &.disabled {
+                opacity: 0.5;
+            }
+        }
+
+        .gprev {
+            left: 1rem !important;
+        }
+
+        .gnext {
+            right: 1rem !important;
         }
     }
 }
