--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -1,47 +1,84 @@
-.projects__card {
+.project__card {
   background-color: var(--primary-light);
   margin-bottom: 1.5rem;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
-.projects__card-img {
+.project__card-img {
   width: 100%;
   height: 100%;
   max-height: 300px;
   overflow: hidden;
 }
 
-.projects__card-img img {
+.project__card-img a {
+  text-decoration: none;
+  color: var(--white-color);
+}
+
+.project__card-img img {
   display: block;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  -webkit-transition-timing-function: ease-in-out;
+          transition-timing-function: ease-in-out;
 }
 
-.projects__card-info {
-  padding: 3rem;
+.project__card-info {
+  padding: 30px;
 }
 
-.projects__card-title {
-  display: block;
-  font-family: var(--serif-font);
+@media screen and (min-width: 768px) {
+  .project__card-info {
+    padding: 34px;
+  }
+}
+
+@media screen and (min-width: 640px) {
+  .project__card-info {
+    padding: 42px;
+  }
+}
+
+.project__card-title {
+  font-size: 36px;
+  line-height: 1.2;
   font-weight: 100;
-  font-size: 1.5rem;
-  line-height: 1.5;
-  margin-bottom: 0.75rem;
+  font-family: var(--serif-font);
+  font-style: normal;
+  color: var(--white-color);
+  margin-bottom: 1.5rem;
 }
 
-.projects__card-desc {
+.project__card-title a {
+  display: block;
+  color: var(--white-color);
+  -webkit-transition-duration: 0.4s;
+          transition-duration: 0.4s;
+  -webkit-transition-timing-function: ease-in-out;
+          transition-timing-function: ease-in-out;
+}
+
+.project__card-title a:hover {
+  color: var(--secondary-color);
+}
+
+.project__card-desc {
+  color: rgba(255, 255, 255, 0.6);
+  line-height: 1.6;
   font-size: 1rem;
-  line-height: 1.5;
   font-family: var(--body-font);
+  font-style: normal;
   font-weight: 300;
-  padding-bottom: 2rem;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.25);
-  margin-bottom: 2rem;
+  margin: 0;
 }
 
-.projects__card-btn {
+.project__card-btn {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -52,7 +89,7 @@
   font-size: 1rem;
 }
 
-.projects__card-btn i {
+.project__card-btn i {
   font-size: 1.35rem;
   margin-left: 1rem;
   -webkit-transition-duration: 0.3s;
@@ -61,9 +98,15 @@
           transition-timing-function: ease-in-out;
 }
 
-.projects__card-btn:hover i {
+.project__card-btn:hover i {
   -webkit-transform: translateX(0.5rem);
           transform: translateX(0.5rem);
+}
+
+.projects.hybrid .project__card-desc {
+  padding-bottom: 2rem;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.25);
+  margin-bottom: 2rem;
 }
 
 .projects__header {
